add user rights

--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -40,14 +40,11 @@ In den folgenden Unterkapiteln wird beschrieben, welche vorbereitenden Einstellu
 === Rechte für Backend-Benutzer:innen vergeben
 
 :rights-purpose: mit dem EmailBuilder arbeiten können
-:right-one: pass:quotes[*CRM > E-Mail > Automatischen Versand bearbeiten*]
-:right-two: pass:quotes[*CRM > E-Mail > HTML-Design bearbeiten*]
-:right-three: pass:quotes[*CRM > E-Mail > Infodienst bearbeiten*]
-:right-four: pass:quotes[*CRM > E-Mail > Newsletter bearbeiten*]
-:right-five: pass:quotes[*CRM > E-Mail > Signatur bearbeiten*]
-:right-six: pass:quotes[*CRM > E-Mail > Vorlagen bearbeiten*]
-:right-seven: pass:quotes[*CRM > E-Mail > Zugangsdaten bearbeiten*]
-:right-eight: pass:quotes[im Bereich *Menü-Sichtbarkeiten*: *CRM > EmailBuilder*]
+:right-one: pass:quotes[*CRM > EmailBuilder > Anzeigen*]
+:right-two: pass:quotes[*CRM > EmailBuilder > Erstellen*]
+:right-three: pass:quotes[*CRM > EmailBuilder > Aktualisieren*]
+:right-four: pass:quotes[*CRM > EmailBuilder > Löschen*]
+:right-five: pass:quotes[im Bereich *Menü-Sichtbarkeiten*: *CRM > EmailBuilder*]
 
 include::_includes:partial$rights.adoc[]
 
