--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -1097,10 +1097,12 @@ Möchtest du wissen, welche Typen und Subtypen in den Optionen verfügbar sind? 
 | *Mobil Arbeit*
 
 | *E-Mail*
-| *Privat*
+| *Privat* +
+*_Hinweis:_* Wenn du sowohl eine private als auch eine geschäftliche E-Mail-Adresse speicherst, hat die private E-Mail-Adresse Vorrang vor der geschäftlichen E-Mail-Adresse.
 
 | *E-Mail*
-| *Geschäftlich*
+| *Geschäftlich* +
+*_Hinweis:_* Wenn du sowohl eine private als auch eine geschäftliche E-Mail-Adresse speicherst, hat die private E-Mail-Adresse Vorrang vor der geschäftlichen E-Mail-Adresse.
 
 | *E-Mail*
 | *PayPal*
