Added info about deleting items + visibility of offers

--- a/docs/de-de/modules/maerkte/pages/check24.adoc
+++ b/docs/de-de/modules/maerkte/pages/check24.adoc
@@ -35,12 +35,20 @@ Schnittstelle zu Check24 einrichten:
 . Gib dein Passwort für den FTP-Zugang ein.
 . Speichere (terra:save[]) die Einstellungen.
 
-[TIP]
+[#datenaustausch-check24]
+== Häufigkeit des Datenaustauschs
+
+Nachdem du die Schnittstelle zu Check24 in plentymarkets eingerichtet hast, findet der Datenaustausch in den in <<#data-exchange>> aufgeführten Intervallen statt.
+
+[[data-exchange]]
 .Häufigkeit des Datenaustauschs
-====
-Nachdem du Check24 in plentymarkets eingerichtet hast, findet der Datenaustausch in den folgenden Intervallen statt: +
-- Auftragsimport alle 15 Minuten
-====
+[cols="1,1a"]
+|===
+|Daten |Intervall
+
+| Auftragsimport
+| alle 15 Minuten
+|===
 
 [#250]
 === Auftragsherkunft aktivieren
@@ -517,6 +525,26 @@ Das Format Check24 Offer ist neu. Daher gibt es dafür kein vergleichbares Forma
 | Gewicht
 
 |===
+
+[#check24-delete-items]
+== Artikel bei Check24 löschen
+
+Varianten werden bei Check24 gelöscht und können nicht mehr auf dem Marktplatz gekauft werden, wenn sie in plentymarkets keinen Bestand mehr haben. Dies passiert automatisch, wenn Artikeldaten an Check24 übertragen werden. Das Intervall, in dem Artikeldaten übertragen werden, legst du in den <<#catalogue-settings, Katalogeinstellungen>> fest. Wenn die Variante in deinem plentymarkets System wieder Bestand hat, wird sie mit der nächsten Artikeldatenübertragung also auch wieder auf Check24 zum Verkauf angeboten.
+
+Wenn du eine Variante, die in plentymarkets Bestand hat, nicht mehr auf Check24 verkaufen möchtest, musst du an der Variante die Verfügbarkeit für den Marktplatz entfernen.
+
+[.instruction]
+Verfügbarkeit entfernen:
+
+. Öffne das Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » [Variante öffnen] » Varianten-Tab: Verfügbarkeit*.
+. *Lösche* (icon:minus-circle[role="red"]) die Verfügbarkeit *Check24*.
+. *Speichere* (terra:save[]) die Einstellungen. +
+→ Die Variante wird bei Check24 gelöscht und kann dort nicht mehr gekauft werden.
+
+[#discrete]
+=== Sichtbarkeit von Angeboten auf Check24
+
+Angebote sind auf Check24 nur sichtbar, wenn es für ein Angebot mindestens ein aktives Angebot gibt. Wenn also ein Artikel nicht mehr im Angebotsexport enthalten ist oder mit dem Bestand *0* an Check24 übertragen wird, wird zu diesem Artikel auch kein Angebot mehr auf Check24 angezeigt.
 
 [#950]
 == Auftragsimport
