Added further infos about item export

--- a/docs/de-de/modules/maerkte/pages/check24.adoc
+++ b/docs/de-de/modules/maerkte/pages/check24.adoc
@@ -48,6 +48,11 @@ Nachdem du die Schnittstelle zu Check24 in plentymarkets eingerichtet hast, find
 
 | Auftragsimport
 | alle 15 Minuten
+
+| Artikelexport
+| Check24 ruft Artikeldaten über eine <<#url-check24-katalog, URL>> ab. +
+
+*_Hinweis:_* Das Intervall für die Übertragung legst du in den <<#catalogue-settings, Katalogeinstellungen>> fest.
 |===
 
 [#250]
@@ -437,6 +442,8 @@ include::partial$catalogue-settings.adoc[]
 
 :interval: einmal täglich nachts
 
+include::partial$catalogue-activation.adoc[]
+
 [#url-check24-katalog]
 ==== URL bei Check24 speichern
 
@@ -455,8 +462,6 @@ URL kopieren:
 . Klicke unter *Download-Einstellungen* im Bereich *Optionen für öffentlichen Link* auf *URL kopieren* (material:content_copy[]).
 → Die URL wird in die Zwischenablage kopiert.
 . Speichere die URL im Backend von Check24.
-
-include::partial$catalogue-activation.adoc[]
 
 [#change-elastic-export-catalogue]
 === _Möglichkeit 3:_ Wechsel von elastischem Export zu Katalog
