ADD more feedback order ui

--- a/docs/de-de/modules/auftraege/pages/order-type-credit-note.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-credit-note.adoc
@@ -1,9 +1,9 @@
 = Auftragstyp Gutschrift
 
-:keywords: Gutschrift, Gutschriftauftrag, Gutschriftbeleg, Gutschriftbeleg stornieren, Rückzahlung, Warenbestand zurückbuchen
+:keywords: Gutschrift, Gutschriftauftrag, Gutschriftdokument, Gutschriftbeleg, Gutschriftbeleg stornieren, Rückzahlung, Warenbestand zurückbuchen
 :author: team-order-core
 
-Bei einer Gutschrift bekommen deine Kund:innen einen Betrag zurückerstattet. Dies kann beispielsweise nach einer xref:auftraege:order-type-return.adoc#[Retoure] der Fall sein. Bei der Gutschrift in plentymarkets handelt es sich also nicht um eine Art umgekehrte Rechnung, sondern um eine Rückzahlung. Gutschriftaufträge erzeugst du unter *Aufträge » Aufträge (Testphase)* aus einem Auftrag. Eine Gutschrift ist also immer einem Auftrag zugeordnet. Die in einem Gutschriftauftrag erzeugten Gutschriftbelege werden auch in Buchhaltungsexporten, wie dem xref:auftraege:buchhaltung.adoc#650[DATEV-Export], berücksichtigt.
+Bei einer Gutschrift bekommen deine Kund:innen einen Betrag zurückerstattet. Dies kann beispielsweise nach einer xref:auftraege:order-type-return.adoc#[Retoure] der Fall sein. Bei der Gutschrift in plentymarkets handelt es sich also nicht um eine Art umgekehrte Rechnung, sondern um eine Rückzahlung. Gutschriftaufträge erzeugst du unter *Aufträge » Aufträge (Testphase)* aus einem Auftrag. Eine Gutschrift ist also immer einem Auftrag zugeordnet. Die in einem Gutschriftauftrag erzeugten Gutschriftdokumente werden auch in Buchhaltungsexporten, wie dem xref:auftraege:buchhaltung.adoc#650[DATEV-Export], berücksichtigt.
 
 [#saving-standard-status]
 == Standardstatus für Gutschriften speichern
@@ -20,7 +20,7 @@ Eine Gutschrift ist immer mit einem bestehenden Auftrag in deinem plentymarkets 
 ======
 Hat eine Kund:in den Auftrag bereits gezahlt, beispielsweise per Vorkasse, und entscheidet sich vor dem Warenausgang gegen den Kauf, empfehlen wir, den Auftrag zu stornieren und direkt im Hauptauftrag eine Gutschrift über alle Auftragspositionen anzulegen.
 
-Kommt es nach erfolgter Zahlung, Warenausgang und Zustellung der Ware für eine oder alle Auftragspositionen zu einer xref:auftraege:order-type-return.adoc#[Retoure] oder im Folgenden zu einem xref:auftraege:order-type-repair.adoc#[Reparaturauftrag], lege die Gutschrift direkt im entsprechenden Retouren- oder Reparaturauftrag an.
+Kommt es nach erfolgter Zahlung, Warenausgang und Zustellung der Ware für eine oder alle Auftragspositionen zu einer xref:auftraege:order-type-return.adoc#[Retoure] oder zu einem xref:auftraege:order-type-repair.adoc#[Reparaturauftrag], lege die Gutschrift direkt im entsprechenden Retouren- oder Reparaturauftrag an.
 ======
 
 :ordertype: Gutschriften
@@ -81,7 +81,7 @@ include::partial$create-order-type.adoc[]
 |Zeigt den Name des Artikels an.
 
 | *Zum Warenkorb hinzufügen* (material:add_shopping_cart[])
-|Fügt nur bestimmte Artikel zur Retoure hinzu. Diese Schaltfläche ist nur verfügbar, wenn mindestens 1 Artikel vorhanden ist. +
+|Fügt nur bestimmte Artikel zur Gutschrift hinzu. Diese Schaltfläche ist nur verfügbar, wenn mindestens 1 Artikel vorhanden ist. +
 *_Tipp:_* Passe die Artikelmenge bei Bedarf im Feld *Menge* an.
 
 2+^| *Warenkorb*
