--- a/docs/de-de/modules/auftraege/pages/order-statuses.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-statuses.adoc
@@ -35,7 +35,7 @@ Die folgenden 28 Statuseinträge sind bereits zu Beginn in deinem plentymarkets 
 | *[2]* Warten auf Freischaltung
 
 | *[3]* Warten auf Zahlung
-|Wird jedem unbezahlten Auftrag vom Typ Auftrag automatisch zugeordnet.
+|Wird jedem unbezahlten Auftrag vom Typ *Auftrag* automatisch zugeordnet.
 
 | *[3.2]* In Warteposition
 a|Wird automatisch in folgenden Fällen gesetzt: +
@@ -45,18 +45,18 @@ a|Wird automatisch in folgenden Fällen gesetzt: +
 * Wenn für einen Auftrag eine Überbezahlung gebucht wird, unabhängig davon, ob Warenbestand vorhanden ist oder nicht.
 
 | *[3.3]* Versandfertig; warten auf Zahlung
-|Wird automatisch einem Auftrag des Typs Auftrag zugeordnet, wenn für den Auftrag eine Teil- oder Anzahlung gebucht wird und Warenbestand für den Auftrag vorhanden ist.
+|Wird automatisch einem Auftrag des Typs *Auftrag* zugeordnet, wenn für den Auftrag eine Teil- oder Anzahlung gebucht wird und Warenbestand für den Auftrag vorhanden ist.
 
 | *[3.4]* Mahnung versendet
-|Empfohlen, um zu erkennen, dass eine Mahnung versendet wurde. Mithilfe einer Ereignisaktion oder Prozessen lässt sich hier eine Automatisierung erreichen. Der Status wird jedoch nicht durch einen Systemautomatismus gesetzt.
+|Empfohlen, um zu erkennen, dass eine Mahnung versendet wurde. Mithilfe von Ereignisaktionen oder Prozessen kann hier auch eine Automatisierung eingerichtet werden. Der Status wird jedoch nicht durch einen Systemautomatismus gesetzt.
 
 | *[4]* In Versandvorbereitung
 |Steht in Verbindung mit Bestandsbeschränkung. Wenn du keinen Bestand führst und keine Beschränkung nutzt, dann steht der Status zur freien Verfügung. +
-Wenn die Bestandsbeschränkung genutzt wird, wird der Status automatisch zugeordnet, wenn ein Auftrag vom Typ Auftrag bezahlt ist, aber der Bestand der Artikel für den Auftrag nicht ausreicht. Die Beschränkung von Artikeln muss auf Nettowarenbestand eingestellt sein. +
+Wenn die Bestandsbeschränkung genutzt wird, wird der Status automatisch zugeordnet, wenn ein Auftrag vom Typ *Auftrag* bezahlt ist, aber der Bestand der Artikel für den Auftrag nicht ausreicht. Die Beschränkung von Artikeln muss auf Nettowarenbestand eingestellt sein. +
 Wenn du die Bestandsbeschränkung und diesen Status bei fehlendem Bestand nutzt, kannst du z.B. erreichen, dass nur Lieferscheine und Rechnungen für Aufträge erzeugt werden, die auch weiter abgewickelt werden können.
 
 | *[5]* Freigabe Versand
-|Wird automatisch zugeordnet, wenn ein Auftrag vom Typ Auftrag bezahlt oder die Zahlungsart z.B. Rechnung oder Vorkasse ist und der Bestand der Artikel für den Auftrag ausreicht oder der Bestand unbeschränkt ist.
+|Wird automatisch zugeordnet, wenn ein Auftrag vom Typ *Auftrag* bezahlt oder die Zahlungsart z.B. Rechnung oder Vorkasse ist und der Bestand der Artikel für den Auftrag ausreicht oder der Bestand unbeschränkt ist.
 
 | *[5.1]* Abwicklung extern
 |Empfohlen, um zu kennzeichnen, dass die Ware durch einen Fulfillment-Anbieter zusammengestellt und verschickt wird. Der Status wird jedoch nicht durch einen Systemautomatismus gesetzt.
@@ -71,13 +71,13 @@ Wenn du die Bestandsbeschränkung und diesen Status bei fehlendem Bestand nutzt,
 |Steht zur freien Verfügung. Möglicher Anwendungsfall ist das Setzen des Status, nachdem Aufträge zur Auswertung exportiert wurden.
 
 | *[8]* Storniert
-|Empfohlen, um zu kennzeichnen, dass ein Auftrag vom Typ Auftrag storniert wurde. Status 8 ist als Standard für stornierte Aufträge festgelegt. Du kannst die Standardfestlegung für stornierte Aufträge jedoch im Menü *Einrichtung » Aufträge » Einstellungen* ändern. Die Einstellung hierfür heißt xref:auftraege:preparatory-settings.adoc#intable-default-status-cancelled-orders[Status stornierter Aufträge]. Wenn du einen anderen Status für Stornierungen festgelegt hast, kannst du Status 8 frei nutzen.
+|Empfohlen, um zu kennzeichnen, dass ein Auftrag vom Typ *Auftrag* storniert wurde. Status 8 ist als Standard für stornierte Aufträge festgelegt. Du kannst die Standardfestlegung für stornierte Aufträge jedoch im Menü *Einrichtung » Aufträge » Einstellungen* ändern. Die Einstellung hierfür heißt xref:auftraege:preparatory-settings.adoc#intable-default-status-cancelled-orders[Status stornierter Aufträge]. Wenn du einen anderen Status für Stornierungen festgelegt hast, kannst du Status 8 frei nutzen.
 
 | *[8.1]* Storniert durch Kunden
 |Empfohlen, um zu kennzeichnen, dass ein Auftrag durch die Kund:in storniert wurde.
 
 | *[9]* Retoure
-|Ist beim Anlegen eines Auftrags vom Typ Retoure automatisch vorausgewählt. Du kannst auch einen anderen xref:auftraege:preparatory-settings.adoc#intable-default-status-return[Status als Standard für Retouren] festlegen. Die Einstellung erfolgt im Menü *Einrichtung » Aufträge » Einstellungen*.
+|Ist beim Anlegen eines Auftrags vom Typ *Retoure* automatisch vorausgewählt. Du kannst auch einen anderen xref:auftraege:preparatory-settings.adoc#intable-default-status-return[Status als Standard für Retouren] festlegen. Die Einstellung erfolgt im Menü *Einrichtung » Aufträge » Einstellungen*.
 
 | *[9.1]* Ware wird geprüft
 |Empfohlen, um in einer Retoure anzuzeigen, dass die retournierte Ware geprüft wird.
@@ -98,26 +98,26 @@ Wenn du die Bestandsbeschränkung und diesen Status bei fehlendem Bestand nutzt,
 |Steht zur freien Verfügung. Kann genutzt werden, um eine Gewährleistung als abgeschlossen zu kennzeichnen. Beim Anlegen einer Gewährleistung erhält der Gewährleistungsauftrag je nach Bestandsführung Status 4 oder 5.
 
 | *[11]* Gutschrift
-|Wird einem Auftrag vom Typ Gutschrift automatisch zugeordnet, wenn eine Gutschrift angelegt wird. Du kannst auch einen anderen xref:auftraege:preparatory-settings.adoc#intable-default-status-credit-note[Status als Standard für Gutschriften] festlegen. Die Einstellung erfolgt im Menü *Einrichtung » Aufträge » Einstellungen*.
+|Wird einem Auftrag vom Typ *Gutschrift* automatisch zugeordnet, wenn eine Gutschrift angelegt wird. Du kannst auch einen anderen xref:auftraege:preparatory-settings.adoc#intable-default-status-credit-note[Status als Standard für Gutschriften] festlegen. Die Einstellung erfolgt im Menü *Einrichtung » Aufträge » Einstellungen*.
 
 | *[11.1]* Gutschrift ausgezahlt
 |Empfohlen, um zu kennzeichnen, dass die Gutschrift ausgezahlt wurde und abgeschlossen ist.
 
 | *[12]* Reparatur
-|Ist beim Anlegen eines Auftrags vom Typ Reparatur automatisch vorausgewählt. Du kannst auch einen anderen xref:auftraege:grundeinstellungen.adoc#intable-default-status-repairs[Status als Standard für Reparaturen] festlegen. Die Einstellung erfolgt im Menü *Einrichtung » Aufträge » Einstellungen*.
+|Ist beim Anlegen eines Auftrags vom Typ *Reparatur* automatisch vorausgewählt. Du kannst auch einen anderen xref:auftraege:grundeinstellungen.adoc#intable-default-status-repairs[Status als Standard für Reparaturen] festlegen. Die Einstellung erfolgt im Menü *Einrichtung » Aufträge » Einstellungen*.
 
 | *[13]* Sammelauftrag
-|Wird einem Auftrag vom Typ Sammelauftrag automatisch zugeordnet, wenn er angelegt wird. Du kannst auch einen anderen xref:auftraege:grundeinstellungen.adoc#intable-default-status-multi-order[Status als Standard für Sammelaufträge] festlegen. Die Einstellung erfolgt im Menü *Einrichtung » Aufträge » Einstellungen*.
+|Wird einem Auftrag vom Typ *Sammelauftrag* automatisch zugeordnet, wenn der Sammelauftrag angelegt wird. Du kannst auch einen anderen xref:auftraege:grundeinstellungen.adoc#intable-default-status-multi-order[Status als Standard für Sammelaufträge] festlegen. Die Einstellung erfolgt im Menü *Einrichtung » Aufträge » Einstellungen*.
 
 | *[14]* Sammelgutschrift
-|Wird einem Auftrag vom Typ Sammelgutschrift automatisch zugeordnet, wenn er angelegt wird. Du kannst auch einen anderen xref:auftraege:grundeinstellungen.adoc#intable-default-status-multi-credit-note[Status als Standard für Sammelgutschriften] festlegen. Die Einstellung erfolgt im Menü *Einrichtung » Aufträge » Einstellungen*.
+|Wird einem Auftrag vom Typ *Sammelgutschrift* automatisch zugeordnet, wenn die Sammelgutschrift angelegt wird. Du kannst auch einen anderen xref:auftraege:grundeinstellungen.adoc#intable-default-status-multi-credit-note[Status als Standard für Sammelgutschriften] festlegen. Die Einstellung erfolgt im Menü *Einrichtung » Aufträge » Einstellungen*.
 |===
 
 [#add-and-edit-statuses]
 == Status hinzufügen und bearbeiten
 
 Im Menü *Einrichtung » Aufträge » Status* kannst du neben den in <<table-default-statuses>> aufgeführten Status eigene hinzufügen. Die bereits vorhandenen kannst du bearbeiten und z.B. umbenennen. Pflege Status in verschiedenen Sprachen, um deine Kund:innen per E-Mail oder im Kundenkonto des Webshops über den Fortschritt zu informieren. Bis auf Status, die mit Systemautomatismen verbunden sind, kannst du alle Status auch wieder löschen. Status, die mit Systemautomatismen verbunden sind, kannst du umbenennen. Du solltest die mit Systemautomatismen verbundenen Status jedoch nicht zweckentfremden. +
-Entscheide in diesem Menü zusätzlich, wie dir die Status in deinem plentymarkets System angezeigt werden sollen. Mit dem Toggle *Status-ID im Statusnamen* anzeigen wählst du aus, ob dir nur der vergebene Name des Status oder zusätzlich auch die Status-ID angezeigt werden sollen.
+Entscheide in diesem Menü zusätzlich, wie dir die Status in deinem plentymarkets System angezeigt werden sollen. Mit dem Toggle *Status-ID im Statusnamen anzeigen* legst du fest, ob nur der vergebene Name des Status oder zusätzlich auch die Status-ID angezeigt werden soll.
 
 [TIP]
 .Name ist kein Pflichtfeld
@@ -133,8 +133,8 @@ Um einen Status hinzuzufügen, gehe wie folgt vor:
 
 . Öffne das Menü *Einrichtung » Aufträge » Status*.
 . Klicke auf *Neuen Status erstellen* (icon:plus-square[role="green"]).
-. Trage eine Statusnummer ein. Die höchstmögliche Nummer ist 19.9999.
-. Trage optional einen Namen ein. +
+. Gib eine Statusnummer ein. Die höchstmögliche Nummer ist 19.9999.
+. Gib optional einen Namen ein. +
 → Die Sprache, in der du eingeloggt bist, wird als Eingabefeld angezeigt.
 . *Speichere* (icon:save[role="green"]) die Einstellungen. +
 → Eingabefelder für weitere Einstellungen werden sichtbar.
