--- a/docs/de-de/modules/auftraege/pages/order-type-multi-order.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-multi-order.adoc
@@ -140,7 +140,7 @@ include::_includes:partial$event-procedure.adoc[]
 == Sammelgutschrift generieren
 
 Eine Sammelgutschrift erzeugst du im Menü *Aufträge » Sammelaufträge*. +
-Alle Gutschriften der ausgewählten Kundenklasse werden gesammelt in einer Sammelgutschrift abgelegt. Diese Sammelgutschrift ist wie Sammelaufträge auch nach dem Erstellen in der Auftragsübersicht bearbeitbar. Je nach Anwendungsfall empfehlen wir, eigene xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklassen] für Sammelgutschriften anzulegen.
+Alle Gutschriften der ausgewählten Kundenklasse werden gesammelt in einer Sammelgutschrift abgelegt. Ebenso wie Sammelaufträge kannst du diese Sammelgutschrift nach dem Erstellen in der Auftragsübersicht bearbeiten. Je nach Anwendungsfall empfehlen wir, eigene xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklassen] für Sammelgutschriften anzulegen.
 
 [.instruction]
 Sammelgutschrift für eine Kundenklasse generieren:
@@ -152,7 +152,7 @@ Sammelgutschrift für eine Kundenklasse generieren:
 . Klicke auf terra:execute[]. +
 → Die Sammelgutschrift wird angelegt.
 
-[#genearte-document-multi-credit-note]
+[#generate-document-multi-credit-note]
 == Dokument Sammelgutschrift generieren
 
 Das Erstellen des Dokuments *Sammelgutschrift* ist nur im dazugehörigen Auftragstyp Sammelgutschrift möglich. Richte zuerst eine Dokumentenvorlage für Sammelgutschriften im Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » [Standort wählen] » Dokumente » Sammelgutschrift* ein. In diesem Menü kannst du das Dokument detailliert einstellen sowie eine Dokumentenvorlage in Form einer PDF-Datei hinterlegen. In der Grundeinstellung der Vorlage sind bereits Standardwerte hinterlegt, die du bei Bedarf durch Kopie aus einer anderen Vorlage, z.B. der Dokumentenvorlage Gutschrift, mit geringem Aufwand weiter vervollständigen kannst.
