--- a/docs/de-de/modules/maerkte/pages/check24.adoc
+++ b/docs/de-de/modules/maerkte/pages/check24.adoc
@@ -532,9 +532,12 @@ Das Format Check24 Offer ist neu. Daher gibt es dafür kein vergleichbares Forma
 |===
 
 [#check24-delete-items]
-== Artikel bei Check24 löschen
+== Artikel auf Check24 entfernen
 
-Varianten werden bei Check24 gelöscht und können nicht mehr auf dem Marktplatz gekauft werden, wenn sie in plentymarkets keinen Bestand mehr haben. Dies passiert automatisch, wenn Artikeldaten an Check24 übertragen werden. Das Intervall, in dem Artikeldaten übertragen werden, legst du in den <<#catalogue-settings, Katalogeinstellungen>> fest. Wenn die Variante in deinem plentymarkets System wieder Bestand hat, wird sie mit der nächsten Artikeldatenübertragung also auch wieder auf Check24 zum Verkauf angeboten.
+Angebote sind auf Check24 nur sichtbar, wenn es für eine Variante mindestens ein aktives Angebot gibt. Wenn also eine Variante nicht mehr im Angebotsexport enthalten ist oder mit dem Bestand *0* an Check24 übertragen wird, wird zu dieser Variante auch kein Angebot mehr auf Check24 angezeigt.
+
+Varianten können also nicht auf Check24 verkauft werden, wenn sie in plentymarkets keinen Bestand mehr haben. Das Angebot zu der Variante auf Check24 wird entfernt, wenn bei der Übertragung von Artikeldaten der Bestand *0* an Check24 exportiert wird. Das Intervall für die Artikeldatenübertragung legst du in den <<#catalogue-settings, Katalogeinstellungen>> fest.
+Wenn die Variante in deinem plentymarkets System wieder Bestand hat, wird sie mit der nächsten Artikeldatenübertragung auch wieder auf Check24 zum Verkauf angeboten.
 
 Wenn du eine Variante, die in plentymarkets Bestand hat, nicht mehr auf Check24 verkaufen möchtest, musst du an der Variante die Verfügbarkeit für den Marktplatz entfernen.
 
@@ -544,12 +547,7 @@ Verfügbarkeit entfernen:
 . Öffne das Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » [Variante öffnen] » Varianten-Tab: Verfügbarkeit*.
 . *Lösche* (icon:minus-circle[role="red"]) die Verfügbarkeit *Check24*.
 . *Speichere* (terra:save[]) die Einstellungen. +
-→ Die Variante wird bei Check24 gelöscht und kann dort nicht mehr gekauft werden.
-
-[#discrete]
-=== Sichtbarkeit von Angeboten auf Check24
-
-Angebote sind auf Check24 nur sichtbar, wenn es für ein Angebot mindestens ein aktives Angebot gibt. Wenn also ein Artikel nicht mehr im Angebotsexport enthalten ist oder mit dem Bestand *0* an Check24 übertragen wird, wird zu diesem Artikel auch kein Angebot mehr auf Check24 angezeigt.
+→ Die Variante wird nun nicht mehr auf Check24 zum Verkauf angeboten.
 
 [#950]
 == Auftragsimport
