add linke breaks

--- a/docs/en-gb/modules/stock-management/pages/installation-and-initial-setup.adoc
+++ b/docs/en-gb/modules/stock-management/pages/installation-and-initial-setup.adoc
@@ -197,13 +197,16 @@ Setting up text to speech functionality:
 | *Confirmation*
 | How detailed should the information be in case the text to speech output confirms an action? +
 *Detailed* = The confirmation contains the most precise information possible. *_Example:_* After an item was successfully redistributed, the text to speech output contains information on the item as well as the names of the source and target storage locations. +
-*Short* = The confirmation is kept short. *_Example:_* After an item was successfully redistributed, no precise information on the item and the affected storage locations are included. +
+*Short* = The confirmation is kept short. +
+*_Example:_* After an item was successfully redistributed, no precise information on the item and the affected storage locations are included. +
 *Off* = No confirmations will be included in the text to speech output for the selected function.
 
 | *Instruction*
 | How detailed should the information be in case the text to speech output provides instructions for users? +
-*Detailed* = The instruction contains the most precise information possible. *_Example:_* During box picking, users will be informed precisely about which item should be picked from which storage location. +
-*Short* = The instruction is kept short. *_Example:_* During box picking, no precise information about the item or affected storage location is included. +
+*Detailed* = The instruction contains the most precise information possible. +
+*_Example:_* During box picking, users will be informed precisely about which item should be picked from which storage location. +
+*Short* = The instruction is kept short. +
+*_Example:_* During box picking, no precise information about the item or affected storage location is included. +
 *Off* = No confirmations will be included in the text to speech output for the selected function.
 
 |====
