change link for hardware packages

--- a/docs/en-gb/modules/app/pages/installation.adoc
+++ b/docs/en-gb/modules/app/pages/installation.adoc
@@ -16,7 +16,7 @@ What do you want to use the app for? Which hardware you need depends on what you
 
 Do you want to see key performance indicators or track customer, item and order data? You only need a mobile Android or iOS device for these functions.
 
-In addition, the plentymarkets app allows you to perform stock management tasks and to use the point of sale system plentyPOS. We recommend that you book a link:https://plentypos.plentymarkets.com/en/[hardware package^] if you want to use these additional functions.
+In addition, the plentymarkets app allows you to perform stock management tasks and to use the point of sale system plentyPOS. We recommend that you book a link:https://marketplace.plentymarkets.com/en/services/hardware[hardware package^] if you want to use these additional functions.
 
 [#200]
 === Case 1: Managing company data
