--- a/docs/de-de/modules/app/pages/installieren.adoc
+++ b/docs/de-de/modules/app/pages/installieren.adoc
@@ -17,7 +17,7 @@ Wofür möchtest du die plentymarkets App nutzen? Je nach Anwendungsfall untersc
 
 Willst du beispielsweise Unternehmenskennzahlen abrufen oder Kunden-, Artikel- und Auftragsdaten suchen? Für diese Funktionen benötigst du lediglich ein mobiles Android- oder iOS-Gerät.
 
-Die plentymarkets App stellt außerdem Funktionen für die mobile Warenwirtschaft sowie das Kassensystem plentyPOS bereit. Wenn du diese weiterführende Funktionen nutzen möchtest, empfehlen wir dir ein link:https://plentypos.plentymarkets.com/[zusätzliches Hardware-Paket^] zu buchen.
+Die plentymarkets App stellt außerdem Funktionen für die mobile Warenwirtschaft sowie das Kassensystem plentyPOS bereit. Wenn du diese weiterführende Funktionen nutzen möchtest, empfehlen wir dir ein link:https://marketplace.plentymarkets.com/services/hardware[zusätzliches Hardware-Paket^] zu buchen.
 
 [#200]
 === Fall 1: Geschäftsdaten verwalten
