--- a/docs/de-de/modules/business-entscheidungen/pages/SPoCC.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/SPoCC.adoc
@@ -377,12 +377,8 @@ Wähle die passende Channel Store Number aus der Dropdown-Liste.
 
 |===
 
-////
-
-Hinweis: Zum Schritt "Cron-Einstellungen" gab es keinen Screenshot in der PowerPoint-Datei, deshalb fehlen hier noch Infos. Das Kapitel wurde von der ProHandel-Seite kopiert und muss noch angepasst werden. "Prohandel" wurde schon global durch "SPoCC ersetzt."
-
 [#cron-settings]
-=== [TODO] Schritt "Cron-Einstellungen"
+=== Schritt "Cron-Einstellungen"
 
 Der Datenaustausch zwischen SPoCC und plentymarkets erfolgt mit sogenannten Crons.
 
@@ -406,9 +402,9 @@ Dieser erstmalige vollständige Import kann, je nach Anzahl der Produkte, einige
 Bestehende Artikel werden nicht über diesen Cron aktualisiert.
 * Der Artikelimport erfolgt am Ende des Tages bzw. in der Nacht.
 
-| *Artikelaktualisierung*
+| *Attributimport*
 |Stündlich
-|Bestehende Artikel und Varianten werden aktualisiert.
+| Bestehende Artikel und Varianten werden aktualisiert.
 Folgende Daten werden über diesen Cron aktualisiert:
 
 * Verknüpfte Varianteneigenschaften
@@ -416,15 +412,19 @@ Folgende Daten werden über diesen Cron aktualisiert:
 * Hersteller (sofern der Hersteller importiert wird)
 * EAN
 
-| *Preisaktualisierung*
-|Stündlich
+| *Bilderimport*
+| Alle 60 Minuten
 |
 
-| *Bestandsaktualisierung*
-|Alle 15 Minuten
+| *Vollständiges Bestands-/Preisupdate*
+| Alle 24 Stunden
+|
+
+| *Delta Bestands-/Preisupdate*
+| Alle 15 Minuten
 |
 |===
-////
+
 
 [#120]
 == Neu importierte Artikeldaten öffnen und ergänzen
